--- a/Django Project/CemeteryAdministration/static/CemeteryAdministration/css/style.css
+++ b/Django Project/CemeteryAdministration/static/CemeteryAdministration/css/style.css
@@ -3,10 +3,6 @@
 }
 
 
-.db-add-row input {
-    width: 100%;
-}
-
 .year-search {
     margin-top: 3em;
     margin-bottom: 5em;
@@ -25,6 +21,7 @@ td div {
     display: inline;
 }
 
+/*
 .border-between > [class*='col-']:before {
  background: #bababa;
  bottom: 0;
@@ -37,3 +34,31 @@ td div {
 .border-between > [class*='col-']:first-child:before {
  display: none;
 }
+*/
+
+/*TODO add border/no-border @ preferences*/
+/* Only inner table bordering */
+/*
+.table-bordered {
+    border: 0px !important;
+}
+
+.table-bordered td:first-child, .table-bordered th:first-child {
+    border-left: 0px !important;
+}
+
+.table-bordered td:last-child, .table-bordered th:last-child {
+    border-right: 0px !important;
+}
+
+.table-bordered tr:last-child td {
+    border-bottom: 0px !important;
+}
+
+.table-bordered * {
+    border-bottom: 0px !important;
+    border-top: 0px !important;
+}
+.table-bordered th {
+    border: 0px !important;
+}*/
