--- a/Django Project/CemeteryAdministration/templates/CemeteryAdministration/annual_spot_table.html
+++ b/Django Project/CemeteryAdministration/templates/CemeteryAdministration/annual_spot_table.html
@@ -5,6 +5,8 @@
 
 {% block content %}
 
+    <!--<input type="checkbox" data-toggle="toggle" data-on="Anual" data-off="Lista" checked>-->
+
     <section class="year-search hidden-print">
         <form action="{% url template_name %}" method="get">
             <div class="input-group">
@@ -22,20 +24,23 @@
 
         {% if table.rows %} <!-- if there are records -->
 
-        <!--todo pagination-->
-        <!--todo replace uparrow and downarrow symbols with glyphs-->
-        <table class="table table-striped table-hover sortable">
+        <!--todo replace uparrow and downarrow symbols with glyphs, highlight sorted column -->
+        <table class="table table-striped table-bordered table-condensed table-hover" cellspacing="0">
             <thead>
-                <tr class="row">
+                <!--<tr class="row">-->
+                <tr>
                     {% for table_header in table_headers %}
                     <!--todo tables that don't break so early, and have more width-->
-                    <th class="col-md-{{ table_header.width }}">{{ table_header.name }}</th>
+                    <th class="col-md-{{ table_header.width }}">
+                    <!--<th>-->
+                        {{ table_header.name }}</th>
                     {% endfor %}
                 </tr>
             </thead>
             <tbody>
                 {% for row in table.rows %}
-                <tr class="row">
+                <!--<tr class="row">-->
+                <tr>
                     {% for data, max_width in row|zip:max_data_widths %}
                     <td>
                         <!--todo somehow differentiate between owner built and company built-->
@@ -51,7 +56,6 @@
                 {% endfor %}
             </tbody>
         </table>
-
         {% else %} <!-- if there are no records -->
 
         <p class="text-warning">Nu există înregistrări de {{ title|lower }} pentru anul {{ table.year }}.</p>
