CRUD for burials

--- a/Django Project/CemeteryAdministration/templates/CemeteryAdministration/base.html
+++ b/Django Project/CemeteryAdministration/templates/CemeteryAdministration/base.html
@@ -64,9 +64,9 @@
           <li class="{% active_page request 'constructions' %}">
             <a href="{% url 'CemeteryAdministration:constructions' %}">Construcții</a></li>
           <li class="{% active_page request 'operations' %}">
-            <a href="{% url 'CemeteryAdministration:operations' %}">Înhumări</a></li>
+            <a href="{% url 'CemeteryAdministration:burials' %}">Burials</a></li>
           <li class="{% active_page request 'revenue' %}">
-            <a href="{% url 'CemeteryAdministration:revenue' %}">Încasări</a></li>
+            <a href="{% url 'CemeteryAdministration:payments' %}">Payments</a></li>
           <li class="{% active_page request 'maintenance' %}">
             <a href="{% url 'CemeteryAdministration:maintenance' %}">Întreținere</a></li>
         </ul>
