Backgrid & js-Grid experiments deletion & Maintenance Levels CRUD

--- a/Django Project/CemeteryAdministration/templates/CemeteryAdministration/base.html
+++ b/Django Project/CemeteryAdministration/templates/CemeteryAdministration/base.html
@@ -68,7 +68,7 @@
           <li class="{% active_page request 'revenue' %}">
             <a href="{% url 'CemeteryAdministration:payments' %}">Payments</a></li>
           <li class="{% active_page request 'maintenance' %}">
-            <a href="{% url 'CemeteryAdministration:maintenance' %}">Întreținere</a></li>
+            <a href="{% url 'CemeteryAdministration:maintenance' %}">Maintenance</a></li>
         </ul>
 
         <ul class="nav navbar-nav navbar-right">
