Remade entity diagram & Ownership CRUD

--- a/Django Project/CemeteryAdministration/templates/CemeteryAdministration/base.html
+++ b/Django Project/CemeteryAdministration/templates/CemeteryAdministration/base.html
@@ -60,7 +60,7 @@
           <li role="separator" class="divider-vertical"></li>
 
           <li class="{% active_page request 'ownerships' %}">
-            <a href="{% url 'CemeteryAdministration:ownerships' %}">Concesiuni</a></li>
+            <a href="{% url 'CemeteryAdministration:ownerships' %}">Ownerships</a></li>
           <li class="{% active_page request 'constructions' %}">
             <a href="{% url 'CemeteryAdministration:constructions' %}">Construcții</a></li>
           <li class="{% active_page request 'operations' %}">
