--- a/Django Project/CemeteryAdministration/templates/CemeteryAdministration/ownerships.html
+++ b/Django Project/CemeteryAdministration/templates/CemeteryAdministration/ownerships.html
@@ -1,1 +1,18 @@
-{% extends "CemeteryAdministration/annual_spot_table.html" %}
+{% extends "CemeteryAdministration/base.html" %}
+
+{% load bootstrap_tags %}
+{% load base_extras %}
+
+{% block additional_styles %}
+{% endblock %}
+
+{% block content %}
+
+  <table id="ownerships" class="jsgrid">
+  </table>
+
+{% endblock %}
+
+{% block additional_scripts %}
+
+{% endblock %}
