--- a/Django Project/CemeteryAdministration/templates/CemeteryAdministration/base.html
+++ b/Django Project/CemeteryAdministration/templates/CemeteryAdministration/base.html
@@ -62,7 +62,7 @@
           <li class="{% active_page request 'ownerships' %}">
             <a href="{% url 'CemeteryAdministration:ownerships' %}">Ownerships</a></li>
           <li class="{% active_page request 'constructions' %}">
-            <a href="{% url 'CemeteryAdministration:constructions' %}">Construcții</a></li>
+            <a href="{% url 'CemeteryAdministration:constructions_jsgrid' %}">Constructions</a></li>
           <li class="{% active_page request 'operations' %}">
             <a href="{% url 'CemeteryAdministration:burials' %}">Burials</a></li>
           <li class="{% active_page request 'revenue' %}">
