Organize plans, add link for importing, option for db wiping

--- a/webapp/cemetery/static/extra-style.css
+++ b/webapp/cemetery/static/extra-style.css
@@ -1,3 +1,7 @@
+form input[type=checkbox] {
+  display: inline; /* it is hidden by forms.scss */
+}
+
 .hoverable-rows tr:hover {
   background-color: lightblue;
 }
