--- a/webapp/cemetery/templates/admin/cemetery/maintenance/change_list.html
+++ b/webapp/cemetery/templates/admin/cemetery/maintenance/change_list.html
@@ -1,5 +1,5 @@
 {% extends "admin/change_list.html" %}
-{% load i18n admin_urls %}
+{% load i18n admin_urls %} {# TODO: check if these are required #}
 
 {% block object-tools-items %}
 {{ block.super }}
